--- a/config/settings_data.json
+++ b/config/settings_data.json
@@ -11,6 +11,7 @@
   "current": {
     "logo": "shopify://shop_images/GRECE.svg",
     "logo_width": 90,
+    "favicon": "shopify://shop_images/GRECE.svg",
     "type_header_font": "assistant_n4",
     "heading_scale": 100,
     "type_body_font": "assistant_n4",
